Add new Ansible playbook files, Lua filters, and documentation updates

--- a/playbooks/templates/aap_operations_manual.j2
+++ b/playbooks/templates/aap_operations_manual.j2
@@ -1,3 +1,17 @@
+---
+title: "My Document"
+author: "John Doe"
+date: "February 2025"
+---
+\newpage
+
+```python
+def hello():
+    print("Hello, world!")
+```
+
+> This is a blockquote
+
 # {{ ORGANIZATION_NAME }} Operations Manual
 ## 1. Introduction
 ### 1.1 Purpose
